# spotipo-take-home

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  task.md
app/: __init__.py  models.py  routes.py  unifi.py
app/templates/: admin.html  base.html  login.html  success.html
app/templates/partials/: error.html
tests/: conftest.py  test_models.py  test_routes.py  test_unifi.py
