[project]
name = "unifi-captive-portal"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "requests>=2.31",
    "gunicorn>=21.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "pytest-cov>=5.0",
    "ty>=0.0.1",
    "ruff>=0.5",
    "types-requests>=2.31",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
